<resources>
    <string name="app_name">모임대장</string>
    <string name="app_sub_name">취미 생활 공유 플랫폼</string>

    <!-- Interest -->
    <string name="interest_00">전체</string>
    <string name="interest_01">아웃도어/여행</string>
    <string name="interest_02">운동/스포츠</string>
    <string name="interest_03">인문학/책/글</string>
    <string name="interest_04">업종/직무</string>
    <string name="interest_05">외국/언어</string>
    <string name="interest_06">문화/공연/축제</string>
    <string name="interest_07">음악/악기</string>
    <string name="interest_08">공예/만들기</string>
    <string name="interest_09">댄스/무용</string>
    <string name="interest_10">봉사활동</string>
    <string name="interest_11">사교/인맥</string>
    <string name="interest_12">차/오토바이</string>
    <string name="interest_13">사진/영상</string>
    <string name="interest_14">야구관람</string>
    <string name="interest_15">게임/오락</string>
    <string name="interest_16">요리/제조</string>
    <string name="interest_17">반려동물</string>
    <string name="interest_18">가족/결혼</string>
    <string name="interest_19">자유주제</string>

    <!--ActionBar title-->
    <string name="title_interest_choice">관심사 선택</string>
    <string name="title_location_choice">관심 지역 선택</string>
    <string name="title_profile_setting">프로필 설정</string>
    <string name="title_group_list_favorite">관심 모임</string>
    <string name="title_group_list_recent">최근 본 모임</string>
    <string name="title_create_group">모임 만들기</string>
    <string name="title_group_info">모임 정보 수정</string>
    <string name="title_moim">정모 만들기</string>
    <string name="title_profile">프로필</string>
    <string name="title_address">정모 장소 선택</string>
    <string name="title_moim_info">정모 참여</string>

    <!--일반 문자열-->
    <string name="cmn_sign_in">로그인</string>
    <string name="cmn_logout">로그아웃</string>
    <string name="cmn_pw">비밀번호</string>
    <string name="cmn_pw_check">비밀번호 확인</string>
    <string name="cmn_auto_sign_in">로그인 상태 유지</string>
    <string name="cmn_id">아이디</string>
    <string name="cmn_name">이름</string>
    <string name="cmn_birth">생년월일</string>
    <string name="cmn_male">남자</string>
    <string name="cmn_female">여자</string>
    <string name="cmn_location">관심 지역</string>
    <string name="cmn_interest">관심사</string>
    <string name="cmn_sign_up">회원가입</string>
    <string name="cmn_tab_default">탭</string>
    <string name="cmn_tab_chat">채팅</string>
    <string name="cmn_tab_gallery">사진첩</string>
    <string name="cmn_tab_board">게시판</string>
    <string name="cmn_tab_group_info">모임정보</string>
    <string name="cmn_save">저장</string>
    <string name="cmn_confirm">확인</string>
    <string name="cmn_group">모임</string>
    <string name="cmn_search">검색</string>
    <string name="cmn_my_group">내모임</string>
    <string name="cmn_search_nearly_group">주변검색</string>
    <string name="cmn_choice_interest">관심사 선택</string>
    <string name="cmn_my_favorite_group">내 관심 모임</string>
    <string name="cmn_recent_view_group">최근 본 모임</string>
    <string name="cmn_premium_group">프리미엄 모임</string>
    <string name="cmn_create_premium_group">유료 클래스 만들기</string>
    <string name="cmn_setting">설정</string>
    <string name="cmn_message">상태 메세지</string>
    <string name="cmn_message_length">%d/50자</string>
    <string name="cmn_find_group">모임찾기</string>
    <string name="cmn_edit_profile">프로필 수정</string>
    <string name="cmn_group_master">모임장</string>
    <string name="cmn_group_information">모임 소개</string>
    <string name="cmn_join">가입 하기</string>
    <string name="cmn_current_moim">현재 예정 정모</string>
    <string name="cmn_members">모임원</string>
    <string name="cmn_group_purpose">모임 목적</string>
    <string name="cmn_group_title">모임 이름</string>
    <string name="cmn_group_location">모임 지역</string>
    <string name="cmn_send">send</string>
    <string name="cmn_create_moim">정모 만들기</string>
    <string name="cmn_group_block">모임에 가입하고 다양한 활동을 진행하세요.</string>
    <string name="cmn_use_terms">서비스 이용약관</string>
    <string name="cmn_privacy">개인정보 처리방침</string>
    <string name="cmn_join_group">가입한 모임</string>
    <string name="cmn_share_button">바로가기</string>
    <string name="cmn_use_term_short">이용약관</string>
    <string name="cmn_agree_to">에 동의합니다.</string>
    <string name="cmn_divider">|</string>
    <string name="cmn_join_in_moim">정모 참여하기</string>
    <string name="cmn_moim_member">참여 멤버</string>
    <string name="cmn_moim_info">정모 일정</string>
    <string name="cmn_wait_loading">잠시만 기다려 주십시오.</string>
    <string name="cmn_won">원</string>
    <string name="cmn_moim_date">정모 날짜</string>
    <string name="cmn_moim_time">정모 시간</string>
    <string name="cmn_moim_pay">참가비</string>
    <string name="cmn_moim_location">정모 장소</string>
    <string name="cmn_chat_message">메세지</string>


    <!-- 경고, 에러 메세지 -->
    <string name="error_network_fail">네트워트 연결에 실패했습니다.\n[에러코드 : %d]</string>
    <string name="error_network_not_connected">네트워크가 불안정합니다.\n연결상태를 확인해주세요.</string>
    <string name="error_plz_input_id">아이디를 입력해주세요.</string>
    <string name="error_id_mismatch">아이디는 5글자 이상 16글자 이하 영문, 숫자로 이루어져 있습니다.</string>
    <string name="error_password_mismatch">비밀번호는 8글자 이상 영문, 숫자로 이루어져 있습니다.</string>
    <string name="error_id_not_exist">해당 아이디가 존재하지 않습니다.</string>
    <string name="error_wrong_password">잘못된 비밀번호 입니다.</string>
    <string name="error_sign_in_fail">로그인 실패 [%s]</string>
    <string name="error_request_update">새로운 버전으로 업데이트가 필요합니다.</string>
    <string name="error_version_not_checked">해당 버전은 사용이 불가능합니다.</string>
    <string name="error_password_unchecked">입력하실 비밀번호가 일치하지 않습니다.</string>
    <string name="error_name_mismatch">이름은 2글자 이상 8글자 이하만 가능합니다.</string>
    <string name="error_birth_empty">생년월일을 선택해주세요.</string>
    <string name="error_location_empty">관심지역을 선택해주세요.</string>
    <string name="error_interest_empty">관심사를 선택해주세요.</string>
    <string name="error_message_empty">상태메세지를 남겨주세요.</string>
    <string name="error_thumb_empty">썸네일 이미지를 선택해주세요.</string>
    <string name="error_id_already_exist">이미 존재하는 아이디입니다.</string>
    <string name="error_sign_up_fail">회원가입 실패 [%s]</string>
    <string name="error_profile_update_fail">프로필 업데이트 실패 [%s]</string>
    <string name="error_update_interest_fail">관심사 변경에 실패했습니다.</string>
    <string name="error_load_group_list_fail">데이터 로드에 실패했습니다. [%s]</string>
    <string name="error_group_list_empty">모임이 존재하지 않습니다.</string>
    <string name="error_already_exist_title">이미 존재하는 그룹명 입니다.</string>
    <string name="error_create_group_fail">모임 생성 실패 [%s]</string>
    <string name="error_title_mismatch">모임 이름은 2글자 이상이여야 합니다.</string>
    <string name="error_purpose_empty">모임 목표를 설정해주세요.</string>
    <string name="error_load_moim_list_fail">"모임 정보를 불러올 수 없습니다. [%s]"</string>
    <string name="error_update_group_info">"모임 정보 수정에 실패했습니다. [%s]"</string>
    <string name="error_change_favorite_fail">관심목록 변경에 실패했습니다. [%s]</string>
    <string name="error_empty_moim_date">모임 날짜를 입력해주세요.</string>
    <string name="error_empty_moim_time">모임 시간을 입력해주세요.</string>
    <string name="error_moim_already_exist">동일 날짜에 이미 정모가 등록되어 있습니다.</string>
    <string name="error_create_moim_fail">모임 만들기에 실패했습니다. [%s]</string>
    <string name="error_join_moim_fail">정모 참여에 실패했습니다. [%s]</string>
    <string name="error_server_request_fail">서버 응답 실패\n고객센터로 문의해주세요.[%1$d]</string>
    <string name="error_unexpected_message">Unexpected error occurred. We are working on it.</string>
    <string name="error_client_unexpected_message">Something technically is wrong. We are working on it.</string>
    <string name="error_server_unexpected_message">Oops! Something went wrong on the server. We are working on it.</string>
    <string name="error_timeout_message">Looks like the server is taking to long to respond, this can be caused by either poor connectivity or an error with our servers. Please try again in a while</string>
    <string name="error_network">Oops! Something went wrong on the server. We are working on it.</string>
    <string name="no_results_found">No results found!</string>

    <!-- 사용자 알림 -->
    <string name="alm_profile_update_success">프로필 업데이트가 완료되었습니다.</string>
    <string name="alm_sign_up_success">회원가입 성공</string>
    <string name="alm_update_interest_success">관심사 변경에 성공했습니다.</string>
    <string name="alm_success_create_group">그룹 만들기 성공</string>
    <string name="alm_favorite_add">관심목록에 추가되었습니다.</string>
    <string name="alm_delete_favorite">관심목록에서 삭제했습니다.</string>
    <string name="alm_data_empty">데이터가 존재하지 않습니다.</string>
    <string name="alm_favor_group_empty">관심 등록된 모임이 없습니다.</string>
    <string name="alm_recent_group_empty">최근 본 모임이 없습니다.</string>
    <string name="alm_my_group_empty">현재 가입된 모임이 없습니다.</string>
    <string name="alm_search_data_empty">\'%s\'(으)로 검색된 결과가 없습니다</string>
    <string name="alm_two_click_exit">뒤로가기를 한번 더 누르시면 종료됩니다.</string>
    <string name="alm_chat_invisible">모임에 가입하고\n다른 사람들과 채팅해보세요</string>
    <string name="alm_input_query">검색어 입력</string>
    <string name="alm_input_thumb">썸네일 이미지를\n선택 해주세요.</string>
    <string name="alm_agree_to_use_terms_and_privacy_policy">이용약관 및 개인정보 처리방침에 동의해주세요.</string>
    <string name="alm_empty_data_for_query">\'%s\'로 검색한 결과가 없습니다.</string>
    <string name="alm_input_location">장소를 입력해주세요.</string>
    <string name="alm_modify_group_info_complete">그룹정보 변경이 완료되었습니다.</string>
    <string name="alm_tutorial">모임장님 안녕하세요.\n우측 상단 설정 버튼을 통해 모임 페이지를 꾸미고\n새로운 분들과의 만남을 시작해보세요.</string>
    <string name="alm_board_ready">게시판 서비스는 준비 중입니다.\n빠른 시일 내에 찾아뵙겠습니다.</string>
    <string name="alm_create_moim_success">새로운 모임을 만들었습니다.</string>

    <string name="hint_input_location">동 읍 면 을 입력해주세요.</string>

    <string name="warning_private_project">이 어플은 실제 서비스 되는 앱이 아닌 개인용 프로젝트 입니다.</string>
    <string name="alm_group_join_success">모임 가입에 성공했습니다.</string>
    <string name="error_group_already_join">이미 가입된 모임입니다.</string>
    <string name="error_group_join_fail">모임 가입 실패 [%s]</string>
    <string name="cmn_cancel">취소</string>
    <string name="cmn_report">신고하기</string>
    <string name="subs_report_info">신고 내용은 영업일 기준 5일 이내에 처리됩니다.</string>
    <string name="hint_report_message">ex) 타인에 대한 욕설, 비방</string>
    <string name="cmn_report_reason">신고사유</string>
    <string name="alm_report_user_check">해당 유저를 신고하시겠습니까?</string>
    <string name="error_input_report_reason">신고 사유를 작성해주세요.</string>
    <string name="cmn_report_target">신고대상</string>
    <string name="cmn_report_date">신고날짜</string>
    <string name="alm_report_success">신고 처리가 완료되었습니다</string>
    <string name="error_report_fail">신고처리가 실패됐습니다. %s</string>
    <string name="cmn_sign_in_google">구글 로그인</string>
    <string name="error_fail_request">현재 서버가 불안정 합니다.\n다시 시도해 주세요.</string>
    <string name="error_share_kakao">카카오톡 공유 실패</string>
    <string name="desc_resign">가입하신 모든 모임에서 탈퇴하고\n회원정보는 지원집니다.\n정말로 탈퇴하시겠습니까?</string>
</resources>