<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="model"
            type="com.moondroid.project01_meetingapp.presentation.ui.moim.MoimViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.moim.MoimActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/ToolbarRed">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                style="@style/TitleWhite"
                android:text="@string/title_moim"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDate"
                style="@style/TextBgGray"
                android:hint="@string/cmn_moim_date"
                android:onClick="@{() -> model.showDate()}"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTime"
                style="@style/TextBgGray"
                android:layout_marginTop="16dp"
                android:hint="@string/cmn_moim_time"
                android:onClick="@{() -> model.showTime()}"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tvPay"
                style="@style/TextBgGray"
                android:layout_marginTop="16dp"
                android:inputType="number"
                android:text="@={model.pay}"
                android:hint="@string/cmn_moim_pay"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLocation"
                style="@style/TextBgGray"
                android:layout_marginTop="16dp"
                android:hint="@string/cmn_moim_location"
                android:onClick="@{() -> model.toLocation()}"/>

            <com.naver.maps.map.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/ButtonRed01"
                android:layout_marginTop="16dp"
                android:text="@string/cmn_save"
                android:onClick="@{() -> model.save()}"/>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

