<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.moondroid.project01_meetingapp.ui.view.activity.SignUpActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.activity.SignUpActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarRed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                style="@style/TitleWhite"
                android:text="@string/cmn_sign_up"/>
        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <EditText
                android:id="@+id/etId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/cmn_id"
                android:fontFamily="@font/nanum_square_round_b"
                android:background="@drawable/bg_edit_white01"
                android:textSize="14dp"
                android:textColor="@color/gray_dark01"
                android:padding="12dp"
                android:inputType="text"
                android:privateImeOptions="defaultInputmode=english" />

            <EditText
                android:id="@+id/etPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/cmn_pw"
                android:fontFamily="@font/nanum_square_round_b"
                android:background="@drawable/bg_edit_white01"
                android:textSize="14dp"
                android:textColor="@color/gray_dark01"
                android:padding="12dp"
                android:inputType="textPassword"
                android:privateImeOptions="defaultInputmode=english" />
            <EditText
                android:id="@+id/etPw2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/cmn_pw_check"
                android:fontFamily="@font/nanum_square_round_b"
                android:background="@drawable/bg_edit_white01"
                android:textSize="14dp"
                android:textColor="@color/gray_dark01"
                android:inputType="textPassword"
                android:padding="12dp"
                android:privateImeOptions="defaultInputmode=english" />


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/nanum_square_round_b"
                android:background="@drawable/bg_edit_white01"
                android:hint="@string/cmn_name"
                android:textColor="@color/gray_dark01"
                android:textSize="14dp"
                android:inputType="text"
                android:padding="12dp"
                android:privateImeOptions="defaultInputmode=korean" />

            <TextView
                android:id="@+id/tvBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_edit_white01"
                android:textColor="@color/gray_dark01"
                android:hint="@string/cmn_birth"
                android:onClick="@{activity::showDateDialog}"
                android:padding="12dp"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/rgAccount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbAccountMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radionbutton_male"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/cmn_male"
                    android:textColor="@color/selector_text_color_radiobutton" />

                <RadioButton
                    android:id="@+id/rbAccountFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radionbutton_female"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/cmn_female"
                    android:textColor="@color/selector_text_color_radiobutton"
                    app:backgroundTint="@null" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_edit_white01"
                android:textColor="@color/gray_dark01"
                android:hint="@string/cmn_location"
                android:onClick="@{activity::goToLocationActivity}"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_edit_white01"
                android:textColor="@color/gray_dark01"
                android:hint="@string/cmn_interest"
                android:onClick="@{activity::goToInterestActivity}"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btnSave"
                style="@style/ButtonRed01"
                android:text="@string/cmn_save"
                android:layout_marginTop="32dp"
                android:onClick="@{activity::signUp}"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
