<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="activity"
            type="com.moondroid.project01_meetingapp.presentation.ui.profile.ReportActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.profile.ReportActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarRed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                style="@style/TitleWhite"
                android:text="@string/cmn_report" />

        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="16dp"
                android:text="@{activity.getReportName()}"
                android:fontFamily="@font/nanum_square_round_eb"/>

            <TextView
                android:id="@+id/tvReason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTarget"
                android:layout_marginTop="16dp"
                android:text="@string/cmn_report_reason"
                android:textSize="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:fontFamily="@font/nanum_square_round_eb"
                android:shadowColor="@color/gray_dark01"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tvReason"
                app:layout_constraintBottom_toTopOf="@id/tvSubs"
                android:background="@drawable/bg_edit_white01"
                android:layout_marginVertical="16dp"
                android:padding="8dp"
                android:fontFamily="@font/nanum_square_round_b"
                android:textSize="16dp"
                android:gravity="top"
                android:hint="@string/hint_report_message"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/btnReport"
                android:text="@string/subs_report_info"
                android:gravity="center"
                android:textSize="14dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/nanum_square_round_b"/>


            <TextView
                android:id="@+id/btnReport"
                style="@style/ButtonRed01"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/cmn_report"/>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
