<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isMember"
            type="Boolean" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{isMember ? View.VISIBLE: View.GONE}"
            android:orientation="vertical">
            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                android:dividerHeight="0dp"
                android:divider="@color/white"
                android:layout_weight="1"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button_red_01"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/nanum_square_round_eb"
                    android:text="@string/cmn_send" />

                <EditText
                    android:id="@+id/etMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:inputType="textMultiLine"
                    android:hint="@string/cmn_chat_message"
                    android:layout_marginBottom="4dp"
                    android:layout_toStartOf="@id/btnSend"
                    android:background="@drawable/bg_edit_white01"
                    android:maxLines="5"
                    android:padding="8dp" />

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alm_chat_invisible"
            android:fontFamily="@font/nanum_square_round_eb"
            android:textColor="@color/gray_dark01"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:visibility="@{isMember ? View.GONE : View.VISIBLE}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
